maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:31: error: not found: value setpos
  setpos(x+1, y);
  ^ShortestPathMaze:32: error: not found: value a
  if (getIndication(a,y) != 9999) avance();
                    ^